# nightreign-relic-man

./: README.md  automate.ipynb  gather_relics_from_game.py  items.py  pyproject.toml  relic.py  relic_effects.txt  relic_inventory.yml  requirements.txt  scrap_data.ipynb  unique_relics.yml
sandbox/: automate.ipynb  effect_preferences.yml  relic_inventory.yml
sandbox/fit_best_builds/: best_value_search.ipynb  effect_preferences.yml  items.py  relic_inventory.yml
sandbox/scrap_inventory_from_game/: ocr.ipynb
src/nightreign_relic_man/: __init__.py
src/nightreign_relic_man/automation/: __init__.py  tasks.py
src/nightreign_relic_man/manager/: __init__.py  relic.py  utils.py
